--- a/.goreleaser.yml
+++ b/.goreleaser.yml
@@ -5,31 +5,11 @@ builds:
 - env:
     - CGO_ENABLED=0
   goos:
-    - linux
     - darwin
-    - windows
   goarch:
-    - 386
     - amd64
-    - arm
-    - arm64
 checksum:
   name_template: '{{ .ProjectName }}_checksums.txt'
-changelog:
-  sort: asc
-  filters:
-    exclude:
-    - '^docs:'
-    - '^test:'
-    - Merge pull request
-    - Merge branch
-dockers:
-- image_templates:
-  - 'goreleaser/goreleaser:{{ .Tag }}'
-  - 'goreleaser/goreleaser:v{{ .Major }}.{{ .Minor }}'
-  - 'goreleaser/goreleaser:latest'
-  extra_files:
-  - scripts/entrypoint.sh
 archive:
   name_template: '{{ .ProjectName }}_{{ .Os }}_{{ .Arch }}{{ if .Arm }}v{{ .Arm }}{{ end }}'
   replacements:
@@ -41,43 +21,8 @@ archive:
   format_overrides:
   - goos: windows
     format: zip
-brew:
+release:
   github:
-    owner: goreleaser
-    name: homebrew-tap
-  folder: Formula
-  homepage:  https://goreleaser.com
-  description: Deliver Go binaries as fast and easily as possible
-  test: |
-    system "#{bin}/goreleaser -v"
-scoop:
-  bucket:
-    owner: goreleaser
-    name: scoop-bucket
-  homepage:  https://goreleaser.com
-  description: Deliver Go binaries as fast and easily as possible
-  license: MIT
-nfpm:
-  name_template: '{{ .ProjectName }}_{{ .Arch }}{{ if .Arm }}v{{ .Arm }}{{ end }}'
-  homepage:  https://goreleaser.com
-  description: Deliver Go binaries as fast and easily as possible
-  maintainer: Carlos Alexandro Becker <root@carlosbecker.com>
-  license: MIT
-  vendor: GoReleaser
-  formats:
-  - deb
-  - rpm
-  dependencies:
-  - git
-  recommends:
-  - rpm
-snapcraft:
-  name_template: '{{ .ProjectName }}_{{ .Arch }}{{ if .Arm }}v{{ .Arm }}{{ end }}'
-  summary: Deliver Go binaries as fast and easily as possible
-  description: |
-    GoReleaser builds Go binaries for several platforms, creates a GitHub
-    release and then pushes a Homebrew formula to a repository. All that
-    wrapped in your favorite CI.
-  grade: stable
-  confinement: classic
-  publish: true
+    owner: soupdiver
+    name: goreleaser
+  prerelease: auto
